* In the DOC conduit, regular expressions as bookmark names work
  now. E.g. a bookmark search string of "return (\S+);" and a 
	bookmark name of "RetVal: $1" or "RetVal: \1" replaces all $i or 
	\i by the i-th subexpression of the match.
* DOC databases are now also kept locally if the user set this option
  (installDatabases has the addidtional argument not to delete
	the files)


2003-2-27  Adriaan de Groot
* Merged Reinhold's print-conduit-id patch from HEAD.
* Continued updating the documentation. Ripped out the revision
  history, Lauri says I'm the only developer in the history of
  KDE to actually maintain it in the docs.
* Updated version to 4.3.9 now that 4.3.8 is out.
* Started work on a real test mode for the vcal conduit.
* syncStack.cc [BRANCH] Set conduit action name to the conduit's name.

KPilot Developer's notes for February 26th, 2003
================================================

2003-2-26  Adriaan de Groot
* Finally solved KDE 3.0 build issues, incorporated minor fixes, updated
  build scripts and RELEASED KPILOT 4.3.8. Get it from the website,
  possibly in a few hours after it updates or from my personal
  backup copy (replace pilone by adridg in the URL).

KPilot Developer's notes for February 14th, 2003
================================================  

2003-2-14  Adriaan de Groot
* Happy Valentine's Day, eh. Remember guys, today your girlfriend
  _is_ more important than hacking. Which reminds me .. 

2003-2-13  Adriaan de Groot
* kpilotLink.{h,cc} [BRANCH] Added a messagesType flag to distinguish
  error messages from normal once-only messages in shouldPrint().
  Print out device name before opening in open().

2003-2-12  Adriaan de Groot
* Applied David Mott's DCOP patches to HEAD. Also applied his RMB
  patches to HEAD. This takes care of some GJJs.
* memoWidget.cc [BOTH] Replaced the label "Memos:" beside the
  category combobox by "Category:" which is also used by the
  address widget. Kept the old string around for safekeeping.