@@ -2,7 +2,6 @@
 #define _KPILOT_JPilotProxy_FACTORY_H
 /* JPilotProxy-factory.h                       KPilot
 **
-** Copyright (C) 2001 by Dan Pilone
 ** Copyright (C) 2002 by Reinhold Kainhofer
 **
 ** This file defines the factory for the JPilotProxy-conduit plugin.
