@@ -3,7 +3,6 @@
 /* JPilotProxy-setup.h                         KPilot
 **
 ** Copyright (C) 2002 by Reinhold Kainhofer
-** Copyright (C) 2001 by Dan Pilone
 **
 ** This file defines the class for the behavior of the setup dialog.
 */
