@@ -2,7 +2,7 @@
 #define _DOC_DOC_SETUP_H
 /* doc-setup.h                       KPilot
 **
-** Copyright (C) 2001 by Reinhold Kainhofer
+** Copyright (C) 2002 by Reinhold Kainhofer
 **
 ** This file defines the widget and behavior for the config dialog
 ** of the doc conduit.
