@@ -2,7 +2,7 @@
 #define _KPILOT_TODO_CONDUIT_H
 /* todo-conduit.h                       KPilot
 **
-** Copyright (C) 2002 Reinhold Kainhofer
+** Copyright (C) 2002-2003 Reinhold Kainhofer
 ** Copyright (C) 1998-2001 Dan Pilone
 ** Copyright (C) 1998-2000 Preston Brown
 ** Copyright (C) 1998 Herwin-Jan Steehouwer
