@@ -1,5 +1,6 @@
 /* todo-setup.cc                        KPilot
 **
+** Copyright (C) 2002-2003 Reinhold Kainhofer
 ** Copyright (C) 2001 by Dan Pilone
 **
 ** This file defines the factory for the todo-conduit plugin.
