@@ -1,6 +1,6 @@
 /* vcal-conduit.cc                      KPilot
 **
-** Copyright (C) 2002 Reinhold Kainhofer
+** Copyright (C) 2002-2003 Reinhold Kainhofer
 ** Copyright (C) 2001 by Dan Pilone
 **
 ** This file defines the vcal-conduit plugin.
