@@ -2,7 +2,7 @@
 #define _KPILOT_VCAL_CONDUIT_H
 /* vcal-conduit.h                       KPilot
 **
-** Copyright (C) 2002 Reinhold Kainhofer
+** Copyright (C) 2002-2003 Reinhold Kainhofer
 ** Copyright (C) 2001 by Dan Pilone
 **
 ** This file defines the vcal-conduit plugin.
