@@ -1,5 +1,6 @@
 /* vcal-factory.cc                      KPilot
 **
+** Copyright (C) 2002-2003 Reinhold Kainhofer
 ** Copyright (C) 2001 by Dan Pilone
 **
 ** This file defines the factory for the vcal-conduit plugin.
